# Xuanzhi

./: .env.example  .gitignore  README.md  SETUP.md  pyproject.toml  requirements.txt  streamlit_app.py
MagicMock/mock.sidebar.text_input()/: 4384298752
docs/planning/: project_brief.md
scripts/: run_arxiv_ingest.py  run_compare_summarisers.py  run_demo.py  run_embed_papers.py  run_extract_figures.py  run_figure_lookup.py  run_summarise.py
src/xuanzhi/: __init__.py
src/xuanzhi/app/: README.md  __init__.py  components.py  data.py  main.py  pipeline.py
src/xuanzhi/cv/: README.md  __init__.py  _clip.py  classify.py  figures.py  index.py  pdf_download.py
src/xuanzhi/db/: __init__.py  schema.sql  store.py
src/xuanzhi/graph/: __init__.py  build.py
src/xuanzhi/ingest/: __init__.py  arxiv.py  base.py  semantic_scholar.py
src/xuanzhi/nlp/: README.md  __init__.py  _device.py  classification.py  clustering.py  compare.py  embeddings.py  summarisation.py
src/xuanzhi/schema/: __init__.py  models.py
src/xuanzhi/utils/: __init__.py  device.py
