[project]
name = "xuanzhi"
version = "0.1.0"
description = "Academic research cognition layer — AIML Analytics group project."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "A. Rich" },
    { name = "S. Klonis" },
    { name = "S. Soliveres" },
    { name = "M. Yu" },
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["xuanzhi*"]

[tool.ruff]
line-length = 100
target-version = "py310"
